Dark mode micro fix

--- a/website/themes/book/assets/_custom.scss
+++ b/website/themes/book/assets/_custom.scss
@@ -46,7 +46,7 @@
     padding: 0;
     // border-radius: 30px;
     // background-color: hsl(222, 14%, 7%);
-    background-color: var(--body-background);
+    // background-color: var(--body-background);
     transition: all 0.2s ease;
   }
   
